# The-Minions-Cursor-Plugin

./: Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  assistants_discussion.md  build.py  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.yaml  voice_config.yaml
mocks/: __init__.py  cursor_mock.py  redis_mock.py
src/: __init__.py
src/minions/: __init__.py  agent.py  cli.py  core.py  memory.py  minion.py  voice.py
src/minions/api/: __init__.py  elevenlabs_api.py  openai_api.py  twilio_api.py
src/minions/cursor/: __init__.py  database.py  exceptions.py  listener.py  models.py
src/minions/database/: __init__.py  data_types.py  redis_database.py
src/minions/indexer/: __init__.py  codebase_indexer.py  embeddings.py
tests/: __init__.py  test_agent.py  test_apis.py  test_codebase_indexer.py  test_integration.py  test_memory.py  test_minion.py  test_redis_database.py  test_voice.py
